--- a/ShadowBlog/appsettings.json
+++ b/ShadowBlog/appsettings.json
@@ -2,7 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Port=5432; Database=ShadowBlog; User Id=postgres; Password=slickrick56"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppImages": {
+    "AllowedExtensions": "jpg,jpeg,gif,bmp,png"
+  },
+
   "AllowedHosts": "*"
 }
