--- a/ShadowBlog/appsettings.json
+++ b/ShadowBlog/appsettings.json
@@ -13,5 +13,12 @@
     "AllowedExtensions": "jpg,jpeg,gif,bmp,png"
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SmtpSettings": {
+    "Email": "dev.jordanhopps@gmail.com",
+    "Password": "wsluutoytgnowvri",
+    "Host": "smpt.gmail.com",
+    "Port": 587
+  }
 }
