--- a/ShadowBlog/appsettings.json
+++ b/ShadowBlog/appsettings.json
@@ -18,7 +18,7 @@
   "SmtpSettings": {
     "Email": "dev.jordanhopps@gmail.com",
     "Password": "wsluutoytgnowvri",
-    "Host": "smpt.gmail.com",
+    "Host": "smtp.gmail.com",
     "Port": 587
   }
 }
